# hakyll-site

./: .gitignore  404.html  404.md  CNAME  Main.hs  about.html  about.md  cabal.project  flake.nix  hakyll-site.cabal  index.html  index.md  pattern-synonym-basics.html  pattern-synonym-basics.lhs  posts.html  projects.html  sitemap.xml
.github/workflows/: deploy.yml
css/syntax/: pygments.css
posts/: BasicPatternSynonyms.lhs  posts.cabal
templates/: default.html  page.html  post.html  posts.html  projects.html  sitemap.xml  source.html
