cabal-version: 3.0
name:          hakyll-site
version:       0.0.0.0
copyright:     Kevin Mullins 2022
maintainer:    kevin@pnotequalnp.com
author:        Kevin Mullins
category:      Web

common base
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Werror=incomplete-patterns
    build-depends:    base >=4.14 && <5.0

library posts
    import:          base
    hs-source-dirs:  posts

executable hakyll-site
    import:             base
    main-is:            Main.hs
    default-extensions: BlockArguments OverloadedStrings
    build-depends:      hakyll ^>=4.15.1
