cabal-version: 3.0
name:          hakyll-site
version:       0.0.0.0
copyright:     Kevin Mullins 2022
maintainer:    kevin@pnotequalnp.com
author:        Kevin Mullins
category:      Web

executable hakyll-site
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ImportQualifiedPost OverloadedStrings ViewPatterns

    ghc-options:        -Wall -Wcompat -Werror=incomplete-patterns
    build-depends:
        base >=4.14 && <5.0,
        filepath ^>=1.4.2,
        hakyll ^>=4.15.1,
        pandoc ^>=2.14,
        slugger ^>=0.1
